# mu.F

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
outputs/2024-08-20/11-10-59/: graph_initial.pickle
outputs/2024-08-20/11-10-59/.hydra/: config.yaml  hydra.yaml
outputs/2024-08-20/11-10-59/serial_mechanism_batch_0_fwd_backward/: output.pkl
outputs/2024-08-20/11-10-59/serial_mechanism_batch_1_fwd_backward/: output.pkl  (+1 more)
paper_results/1#/backward/: graph_backward_iterate_0_node_2.pickle  graph_backward_iterate_0_node_4.pickle  memory0_post_backend_clear.prof  memory1_post_backend_clear.prof  memory4.prof
paper_results/1#/matlab/: constraint_fn.m  forwardbackwardinference.m  forwardpropagation.m  intersection.m  minimization.m  union.m
paper_results/4#/backward/: graph_backward-reconstructed_iterate_0.pickle  memory1.prof  memory3.prof  memory3_post_backend_clear.prof
paper_results/4#/simultaneous/: graph_direct_complete.pickle
paper_results/centralised/4#/: multirun.yaml
paper_results/decentralised/19-42-10/: multirun.yaml
src/: cs_assembly.py  decomposition.py  direct.py  integration.py  load_models.py  main.py  results_analysis.py  test.py  utils.py
src/config/: case_study.yaml  dynamics.yaml  integrator.yaml
src/config/case_study/: affine_study.yaml  batch_reaction_network.yaml  convex_estimator.yaml  convex_estimator_step.yaml  rl_pcgym.yaml  serial_batch_reactor.yaml  tablet_press.yaml  temporal_study.yaml
src/config/dynamics/: dynamics.yaml
src/config/graph/: temporal_study.yaml
src/config/init/: affine_study.yaml  batch_reaction_network.yaml  convex_estimator.yaml  convex_estimator_step.yaml  rl_pcgym.yaml  serial_batch_reactor.yaml  tablet_press.yaml
src/config/model/: affine_study.yaml  batch_reaction_network.yaml  convex_estimator.yaml  rl_pcgym.yaml  serial_batch_reactor.yaml  tablet_press.yaml  temporal_study.yaml
src/config/reconstruction/: affine_study.yaml  batch_reaction_network.yaml  convex_estimator_step.yaml  rl_pcgym.yaml  serial_batch_reactor.yaml  tablet_press.yaml
src/config/samplers/: affine_study.yaml  convex_estimator.yaml  convex_estimator_step.yaml  rl_pcgym.yaml  serial_batch_reactor.yaml  tablet_press.yaml  temporal_study.yaml
src/config/solvers/: affine_study.yaml  batch_reaction_network.yaml  convex_estimator.yaml  convex_estimator_step.yaml  rl_pcgym.yaml  serial_batch_reactor.yaml  tablet_press.yaml  temporal_study.yaml
src/config/surrogate/: affine_study.yaml  batch_reaction_network.yaml  convex_estimator.yaml  convex_estimator_step.yaml  rl_pcgym.yaml  serial_batch_reactor.yaml  tablet_press.yaml  temporal_study.yaml
src/constraints/: casadi_evaluator.py  constructor.py  downstream.py  evaluator.py  functions.py  jax_evaluator.py  utilities.py  utils.py
src/constraints/solvers/: callbacks.py  casadi_tf_v2_test4.py  constructor.py  function_tf_2.py  functions.py  solvers.py  test_tf_casadi.py  utilities.py
src/graph/: graph_assembly.py  methods.py  rl_constructor.py
src/initialisation/: methods.py
src/matlab_results/decentralised/: backwards_propagation_projection.mat  centralised_projections.mat
src/mu.F/: cs_assembly.py  decomposition.py  direct.py  integration.py  main.py
src/mu.F/constraints/: casadi_evaluator.py  constructor.py  jax_evaluator.py
src/mu.F/post_processes/: constructor.py  methods.py  utils.py
src/mu.F/reconstruction/: objects.py  samplers.py  utils.py
src/mu.F/unit_evaluators/: constructor.py
src/mu.F/visualisation/: methods.py  visualiser.py
src/mu_F/: cs_assembly.py  decomposition.py  direct.py  integration.py  main.py  utils.py
src/mu_F/config/: integrator.yaml
src/mu_F/constraints/: casadi_evaluator.py  constructor.py  downstream.py  jax_evaluator.py
src/mu_F/graph/: graph_assembly.py  methods.py
src/mu_F/post_processes/: constructor.py
src/mu_F/reconstruction/: constructor.py
src/mu_F/samplers/: appproximators.py  constructor.py
src/mu_F/solvers/: constructor.py  functions.py  solvers.py  utilities.py
src/mu_F/surrogate/: gp_utils.py  nn_utils.py  predictor.py  surrogate.py  svm_utils.py  trainer.py
src/mu_F/unit_evaluators/: constructor.py  integrators.py  ode.py  steady_state.py  utils.py
src/mu_F/visualisation/: methods.py  visualiser.py
src/post_processes/: constructor.py
src/reconstruction/: constructor.py  methods.py  objects.py  samplers.py
src/samplers/: appproximators.py  constructor.py  space_filling.py  utils.py
src/solvers/: casadi_tf_v2_test.py  casadi_tf_v2_test4.py  constructor.py  functions.py  solvers.py  test_tf_casadi.py
src/surrogate/: data_utils.py  gp_utils.py  nn_utils.py  predictor.py  surrogate.py  svm_utils.py  trainer.py
src/unit_evaluators/: constructor.py  explicit_fn.py  implicit_fn.py  integrators.py  ode.py  steady_state.py  test.py  utils.py
src/visualisation/: methods.py  visualiser.py
tests/: test_cs_assembly.py  test_decomposition.py  test_direct.py  test_integration.py  test_utils.py
(+346 files in other folders)
