[tool.poetry]
name = "mu_F"
version = "0.0.1"
description = "Multi-unit feasibility"
authors = ["Max Mowbray <maxmowbray@msn.com>"]
packages = [{include = "mu_F", from = "src"}]

# Note: Poetry will exclude files declared in .gitignore when creating the python package file.

[tool.poetry.dependencies]
python = "~3.10"
absl-py ="2.1.0"
aiofiles ="24.1.0"
aiohappyeyeballs ="2.6.1"
aiohttp ="3.11.16"
aiohttp-cors = "0.8.1"
aiosignal = "1.3.1"
aiosqlite = "0.20.0"
annotated-types = "0.7.0"
antlr4-python3-runtime = "4.9.3"
asttokens = "2.4.1"
astunparse = "1.6.3"
asyncua = "1.1.5"
attrs = "23.2.0"
beartype = "0.16.4"
cachetools = "5.5.2"
casadi = "3.7.2"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
chex = "*"
click = "8.1.7"
cloudpickle = "3.0.0"
cola-ml = "0.0.5"
cola-plum-dispatch = "0.1.4"
colorama = "^0.4.5"
colorful = "0.5.6"
comm = "0.2.2"
configobj = "5.0.6"
constantly = "15.1.0"
cryptography = "43.0.3"
cycler = "0.12.1"
Cython = "0.29.28"
debugpy = "1.8.9"
decorator = "5.1.1"
diffrax = "*"
dill = "0.3.9"
distlib = "0.3.9"
distro = "1.7.0"
dm-tree = "0.1.8"
equinox = "*"
et-xmlfile = "1.1.0"
etils = "1.6.0"
executing = "2.1.0"
Farama-Notifications = "0.0.4"
filelock = "3.18.0"
flatbuffers = "24.3.25"
flax = "*"
fonttools = "4.47.0"
frozenlist = "1.4.1"
fsspec = "2023.12.2"
gast = "0.5.4"
google-api-core = "2.24.2"
google-auth = "2.38.0"
google-pasta = "0.2.0"
googleapis-common-protos = "1.69.2"
gpjax = "*"
grpcio = "1.63.0"
gymnasium = "1.0.0"
h5py = "3.11.0"
httplib2 = "0.20.2"
hydra-core = "1.3.2"
hyperlink = "21.0.0"
idna = "3.3"
importlib-metadata = "4.6.4"
importlib-resources = "6.1.1"
incremental = "21.3.0"
ipykernel = "6.29.5"
ipython = "8.29.0"
jax = "0.6.2"
jaxlib = "0.6.2"
jaxopt = "*"
jaxtyping = "*"
jedi = "0.19.2"
jeepney = "0.7.1"
Jinja2 = "^3.0.3"
joblib = "1.3.2"
jsonpatch = "1.32"
jsonpointer = "2.0"
jsonschema = "3.2.0"
jupyter_client = "8.6.3"
jupyter_core = "5.7.2"
keras = "3.10.0"
keyring = "23.5.0"
kiwisolver = "1.4.5"
launchpadlib = "1.10.16"
"lazr.restfulclient" = "0.14.4"
"lazr.uri" = "1.0.6"
libclang = "18.1.1"
lineax = "0.0.6"
linkify-it-py = "2.0.3"
Markdown = "3.6"
markdown-it-py = "3.0.0"
MarkupSafe = "2.1.5"
matplotlib = "3.10.1"
matplotlib-inline = "0.1.7"
mdit-py-plugins = "0.4.1"
mdurl = "0.1.2"
memory-profiler = "0.61.0"
memray = "1.13.2"
ml-dtypes = "0.5.1"
more-itertools = "8.10.0"
mpmath = "1.3.0"
msgpack = "1.0.7"
multidict = "*"
namex = "0.0.8"
nest-asyncio = "1.6.0"
networkx = "3.3"
numpy = "2.0.0"
nvidia-cublas-cu12 = "^12.1.3.1"
nvidia-cuda-cupti-cu12 = "^12.1.105"
nvidia-cuda-nvrtc-cu12 = "^12.1.105"
nvidia-cuda-runtime-cu12 = "^12.1.105"
nvidia-cudnn-cu12 = "^9.1.0.70"
nvidia-cufft-cu12 = "^11.0.2.54"
nvidia-curand-cu12 = "^10.3.2.106"
nvidia-cusolver-cu12 = "^11.4.5.107"
nvidia-cusparse-cu12 = "^12.1.0.106"
nvidia-nccl-cu12 = "^2.20.5"
nvidia-nvjitlink-cu12 = "^12.6.77"
nvidia-nvtx-cu12 = "^12.1.105"
oauthlib = "3.2.0"
omegaconf = "2.3.0"
onnx = "1.17.0"
opencensus = "0.11.4"
opencensus-context = "0.1.3"
openpyxl = "3.1.2"
opt-einsum = "*"
optax = "*"
optimistix = "0.0.10"
optree = "0.10.0"
orbax-checkpoint = "0.4.8"
packaging = "23.2"
pandas = "2.3.3"
parso = "0.8.4"
pexpect = "4.8.0"
pillow = "10.2.0"
platformdirs = "4.3.7"
prometheus_client = "0.21.1"
prompt_toolkit = "3.0.48"
propcache = "0.3.1"
proto-plus = "1.26.1"
protobuf = "5.28.3"
psutil = "6.0.0"
ptyprocess = "0.7.0"
pure_eval = "0.2.3"
py-spy = "0.3.14"
pyasn1 = "0.6.1"
pyasn1_modules = "0.4.2"
pycparser = "2.22"
pydantic = "2.11.2"
pydantic_core = "2.33.1"
Pygments = "2.17.2"
pyOpenSSL = "24.2.1"
pyparsing = "3.1.2"
pyrsistent = "0.20.0"
python-dateutil = "2.9.0.post0"
pytreeclass = "0.9.2"
pytz = "2024.1"
PyYAML = "6.0.1"
pyzmq = "26.2.0"
ray = "2.20.0"
requests = "2.31.0"
rich = "13.7.1"
rsa = "4.9"
scikit-learn = "1.7.2"
scipy = "1.15.0"
seaborn = "0.13.2"
SecretStorage = "3.3.3"
simple-pytree = "0.1.7"
six = "1.16.0"
smart-open = "7.1.0"
sobol-seq = "0.2.0"
sortedcontainers = "2.4.0"
stack-data = "0.6.3"
sympy = "^1.13.3"
tensorflow = "2.20.0"
termcolor = "2.4.0"
textual = "0.71.0"
threadpoolctl = "3.5.0"
toolz = "0.12.1"
torch = "*"
tornado = "6.4.2"
tqdm = "4.66.3"
traitlets = "5.14.3"
triton = "^3.5.0"
typeguard = "2.13.3"
typing-inspection = "0.4.0"
typing_extensions = "4.13.1"
tzdata = "2024.1"
uc-micro-py = "1.0.3"
urllib3 = "2.2.1"
virtualenv = "20.30.0"
wadllib = "1.3.6"
wcwidth = "0.2.13"
Werkzeug = "3.0.2"
wrapt = "1.16.0"
yarl = "1.18.3"
zipp = "3.18.1"
gpytorch = "*"
mypy = "^1.19.1"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_untyped_defs = true


[tool.poetry.group.dev.dependencies]
pylint = "2.15.10"
isort = "^5.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
taskipy = "^1.2.0"
black = "^22.1.0"
ipykernel = "^6.29.5"
ruff = "^0.11.8"
autocopyright = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"